[gd_scene load_steps=3 format=3 uid="uid://cyrwa7wqy8ua6"]

[ext_resource type="Script" path="res://game/scripts/game_over.gd" id="1_ov2n2"]
[ext_resource type="FontFile" uid="uid://dtp1cmeh2885c" path="res://game/ThaleahFat.ttf" id="2_205j1"]

[node name="GameOver" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ov2n2")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameOverText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_205j1")
text = "Game Over"
horizontal_alignment = 1

[node name="LevelReachedText" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_205j1")
text = "Level Reached: 0"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_205j1")
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_205j1")
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/RetryButton" to="CenterContainer" method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/QuitButton" to="CenterContainer" method="_on_quit_button_pressed"]
